<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".AddProducts">

    <TextView
        android:id="@+id/copyrightTxt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_slab_light_italic"
        android:text="@string/title_credits"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProdBtn"
        app:layout_constraintVertical_bias="0.728" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:contentDescription="@string/title_mmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="493dp"
        android:layout_height="60dp"
        android:contentDescription="@string/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pastel_peach" />

    <ImageButton
        android:id="@+id/homeBtn3"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/title_homelogo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_icon" />

    <TextView
        android:id="@+id/mmTxt3"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:fontFamily="@font/dalgona"
        android:shadowColor="@color/darkred"
        android:shadowDx="5"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/title_minimart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/homeBtn3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="111dp"
        android:layout_height="97dp"
        android:contentDescription="@string/title_searchProd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/add_icon" />

    <TextView
        android:id="@+id/addTxt2"
        android:layout_width="232dp"
        android:layout_height="37dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/title_addbtn"
        android:textAlignment="center"
        android:textColor="@color/darkred"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.027" />

    <Button
        android:id="@+id/addProdBtn"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:background="@color/darkorange"
        android:drawableRight="@drawable/add"
        android:fontFamily="@font/lemon"
        android:text="@string/title_addbtn"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityEditTxtAS"
        app:layout_constraintVertical_bias="0.224" />

    <EditText
        android:id="@+id/quantityEditTxtAS"
        android:layout_width="276dp"
        android:layout_height="57dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/title_enterProdQuantity"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEditTxtAS"
        app:layout_constraintVertical_bias="0.056" />

    <EditText
        android:id="@+id/priceEditTxtAS"
        android:layout_width="274dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/title_enterProdPrice"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodNameEditTxtAS"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/prodNameEditTxtAS"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/title_enterProdName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTxt2"
        app:layout_constraintVertical_bias="0.115" />

</androidx.constraintlayout.widget.ConstraintLayout>