<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/copyrightTxt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="© Sandoval_M 2021"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="109dp"
        android:layout_height="62dp"
        android:background="@color/dark_pink"
        android:drawableRight="@drawable/enter_icon"
        android:fontFamily="@font/lemon"
        android:text="@string/title_enterBtn"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/txtViewWelcome"
        android:layout_width="338dp"
        android:layout_height="110dp"
        android:layout_marginBottom="332dp"
        android:fontFamily="@font/regbrush"
        android:text="@string/title_welcome"
        android:textAlignment="center"
        android:textColor="@color/darkorange"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.152" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="493dp"
        android:layout_height="60dp"
        android:contentDescription="@string/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pastel_peach" />

    <TextView
        android:id="@+id/mmTxt"
        android:layout_width="276dp"
        android:layout_height="35dp"
        android:fontFamily="@font/dalgona"
        android:shadowColor="@color/darkred"
        android:shadowDx="5"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/title_minimart"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/copyrightTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_slab_light_italic"
        android:text="@string/title_credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBtn"
        app:layout_constraintVertical_bias="0.613" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="351dp"
        android:layout_height="296dp"
        android:contentDescription="@string/title_mmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewWelcome"
        app:layout_constraintVertical_bias="0.052"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/homeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/ic_home" />

</androidx.constraintlayout.widget.ConstraintLayout>