<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".DeleteProducts"
    tools:layout_editor_absoluteX="-14dp"
    tools:layout_editor_absoluteY="0dp">

    <TextView
        android:id="@+id/rec_transparent3"
        android:layout_width="152dp"
        android:layout_height="145dp"
        android:background="@drawable/rectangle_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProdDS"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/copyrightTxt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_slab_light_italic"
        android:text="@string/title_credits"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteProdBtnDS"
        app:layout_constraintVertical_bias="0.654" />

    <TextView
        android:id="@+id/prodQuantTxtDS"
        android:layout_width="139dp"
        android:layout_height="23dp"
        android:fontFamily="@font/raleway"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/rec_transparent3"
        app:layout_constraintEnd_toEndOf="@+id/rec_transparent3"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/rec_transparent3"
        app:layout_constraintTop_toBottomOf="@+id/prodPriceTxtDS"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/prodPriceTxtDS"
        android:layout_width="138dp"
        android:layout_height="32dp"
        android:fontFamily="@font/raleway"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rec_transparent3"
        app:layout_constraintEnd_toEndOf="@+id/rec_transparent3"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/rec_transparent3"
        app:layout_constraintTop_toBottomOf="@+id/prodNameTxtDS"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/prodNameTxtDS"
        android:layout_width="138dp"
        android:layout_height="32dp"
        android:fontFamily="@font/raleway"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rec_transparent3"
        app:layout_constraintEnd_toEndOf="@+id/rec_transparent3"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/rec_transparent3"
        app:layout_constraintTop_toTopOf="@+id/rec_transparent3"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/deleteProdBtnDS"
        android:layout_width="98dp"
        android:layout_height="45dp"
        android:background="@color/darkred"
        android:drawableRight="@drawable/delete"
        android:fontFamily="@font/lemon"
        android:text="@string/title_delete"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodQuantTxtDS"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/raleway"
        android:text="@string/title_ProdQuantity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/prodQuantEditTxtUS"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/title_ProdPrice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:text="@string/title_ProdName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchProdDS"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/searchProdDS"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginBottom="100dp"
        android:background="@color/darkorange"
        android:drawableRight="@drawable/search"
        android:fontFamily="@font/lemon"
        android:text="@string/title_searchProd"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/lightgreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prodIDEditTxtDS"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/searchTxt4"
        android:layout_width="223dp"
        android:layout_height="85dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/title_deletebtn"
        android:textAlignment="textStart"
        android:textColor="@color/darkred"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.255"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/prodIDEditTxtDS"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/title_enterProdID"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTxt4"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_searchProd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.048"
        app:srcCompat="@drawable/delete_icon" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:layout_marginBottom="356dp"
        android:contentDescription="@string/title_mmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.095"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="493dp"
        android:layout_height="60dp"
        android:contentDescription="@string/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pastel_peach" />

    <TextView
        android:id="@+id/mmTxt7"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/dalgona"
        android:shadowColor="@color/darkred"
        android:shadowDx="5"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/title_minimart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/homeBtn7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/homeBtn7"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:contentDescription="@string/title_homelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/home_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>