<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".ViewAllProducts">

    <TextView
        android:id="@+id/listOfProdsTxt"
        android:layout_width="155dp"
        android:layout_height="86dp"
        android:fontFamily="@font/bowlby_one"
        android:text="@string/title_listofProds"
        android:textAlignment="center"
        android:textColor="@color/darkred"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="151dp"
        android:layout_height="148dp"
        android:layout_marginBottom="324dp"
        android:contentDescription="@string/title_mmlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.09"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="493dp"
        android:layout_height="60dp"
        android:contentDescription="@string/title_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pastel_peach" />

    <TextView
        android:id="@+id/mmTxt5"
        android:layout_width="117dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="236dp"
        android:fontFamily="@font/dalgona"
        android:shadowColor="@color/darkred"
        android:shadowDx="5"
        android:shadowDy="-5"
        android:shadowRadius="5"
        android:text="@string/title_minimart"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBtn5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/listViewProds"
        android:layout_width="409dp"
        android:layout_height="503dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOfProdsTxt" />

    <ImageButton
        android:id="@+id/homeBtn5"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/title_homelogo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/home_icon" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listOfProdsTxt"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/allproducts_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>